Bug 1659259 - Don't reconstruct frames as a result of font-list refresh if we're in a printing or print-preview context. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D87177